--- a/RHIDS.ipynb
+++ b/RHIDS.ipynb
@@ -136,6 +136,13 @@
       "\n",
       "Fusing model...\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DONE\n"
+     ]
     }
    ],
    "source": [
@@ -148,7 +155,8 @@
     "img_size = (640,640)\n",
     "if device.type != 'cpu':\n",
     "    model(torch.zeros(1, 3, *img_size).to(device).type_as(next(model.model.parameters())))  # warmup\n",
-    "\n"
+    "\n",
+    "print(\"DONE\")"
    ]
   },
   {
@@ -189,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,16 +378,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python 3.9.4\\lib\\site-packages\\torch\\functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:3191.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 14.5 s\n"
+      "Wall time: 9.57 s\n"
      ]
     }
    ],
@@ -390,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,6 +420,7 @@
     "        \n",
     "    target_list = []\n",
     "    gallery = {}\n",
+    "    queries = None\n",
     "    \n",
     "    key = None\n",
     "    processing_speed = 1\n",
@@ -455,8 +472,9 @@
     "        if len(target_list) != 0:\n",
     "            dets, queries = human_feature_extractor(rgb)\n",
     "            \n",
-    "        if len(queries) == 0:\n",
-    "            continue\n",
+    "        if queries is not None:\n",
+    "            if len(queries) == 0:\n",
+    "                continue\n",
     "        \n",
     "        for idx,target_name in enumerate(target_list):\n",
     "            \n",
@@ -506,9 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter target name : t1\n"
+     ]
+    }
+   ],
    "source": [
     "identify_known_humans(path = 'demo_videos/ipcam1.mp4', is_stream = False)"
    ]
@@ -530,25 +556,146 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Multiple Person Tracking"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def multi_person_tracking(path, is_stream = False):\n",
+    "    \n",
+    "    \n",
+    "    if is_stream:\n",
+    "        stream = VideoStream(path).start()\n",
+    "    else:\n",
+    "        video = cv2.VideoCapture(path)\n",
+    "        video_fps = video.get(cv2.CAP_PROP_FPS)\n",
+    "        \n",
+    "    yolo_osnet_track_targets = []\n",
+    "    \n",
+    "    key = None\n",
+    "    processing_speed = 1\n",
+    "    \n",
+    "    fps = FPS().start() \n",
+    "    \n",
+    "    frame_no = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        \n",
+    "        if is_stream:\n",
+    "            frame = stream.read()\n",
+    "        else:\n",
+    "            _, frame = video.read()\n",
+    "            \n",
+    "        if frame is None:\n",
+    "            break\n",
+    "            \n",
+    "        frame_no += 1\n",
+    "            \n",
+    "        if frame_no % processing_speed != 0 and not is_stream:\n",
+    "            continue\n",
+    "            \n",
+    "        if frame.shape[0] > frame.shape[1]:\n",
+    "            frame = imutils.resize(frame, height=750)\n",
+    "        else:\n",
+    "            frame = imutils.resize(frame, width=750)\n",
+    "        \n",
+    "\n",
+    "        rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        \n",
+    "        dets = detect(rgb).cpu().detach().numpy()\n",
+    "\n",
+    "        dets_filtered = []    \n",
+    "        croped_images = []\n",
+    "\n",
+    "        for det in dets:\n",
+    "            x1, y1, x2, y2, conf, cls = det\n",
+    "            startX, startY, endX, endY = int(x1), int(y1), int(x2), int(y2)\n",
+    "            class_name = class_names[int(cls)]\n",
+    "            if conf > 0.45 and class_name in ['person']:\n",
+    "                dets_filtered.append([startX, startY, endX, endY, class_name, round(conf, 2)])\n",
+    "                croped = rgb[startY:endY,startX:endX]\n",
+    "                croped_images.append(croped)\n",
+    "\n",
+    "\n",
+    "        if len(croped_images) != 0:\n",
+    "\n",
+    "            features_curr = extractor(croped_images)\n",
+    "\n",
+    "\n",
+    "            if frame_no == 0 or yolo_osnet_track_targets == []:\n",
+    "\n",
+    "                yolo_osnet_track_targets = features_curr\n",
+    "\n",
+    "            else:\n",
+    "\n",
+    "                sim_res = 1-torchreid.metrics.compute_distance_matrix(features_curr,yolo_osnet_track_targets,'cosine').cpu().detach().numpy()\n",
+    "\n",
+    "                query_id_used, gallery_id_used = [], []\n",
+    "                for sim in -np.sort(-np.concatenate(sim_res)):\n",
+    "                    sim_ids = np.array(np.where(sim_res == sim)).T\n",
+    "                    for query_id, gallery_id in sim_ids:\n",
+    "                        startX, startY, endX, endY, class_name, conf = dets_filtered[query_id]\n",
+    "                        if query_id not in query_id_used and gallery_id not in gallery_id_used and sim > 0.60:\n",
+    "                            cv2.rectangle(frame, (startX, startY), (endX, endY),get_color(idx=gallery_id+1), 2)\n",
+    "                            draw_bb_text(frame, f'{class_name}, ID : {gallery_id}', (startX, startY, endX, endY),cv2.FONT_HERSHEY_DUPLEX, 0.4, (0, 0, 0), 1, get_color(idx=gallery_id+1))\n",
+    "\n",
+    "\n",
+    "                            if sim > 0.65:\n",
+    "                                yolo_osnet_track_targets[gallery_id] = features_curr[query_id]\n",
+    "\n",
+    "                            query_id_used.append(query_id), gallery_id_used.append(gallery_id)\n",
+    "\n",
+    "                        elif query_id not in query_id_used and sim_res[query_id].max() < 0.55:\n",
+    "                            yolo_osnet_track_targets = torch.cat([yolo_osnet_track_targets, torch.tensor([features_curr[query_id].tolist()]).to(device)])\n",
+    "                            query_id_used.append(query_id)\n",
+    "\n",
+    "        \n",
+    "        fps.update()\n",
+    "        fps.stop()\n",
+    "        \n",
+    "        draw_text(frame, \"FPS : {:.2f}\".format(fps.fps()), (1, 20),cv2.FONT_HERSHEY_DUPLEX, 0.6, (50, 50, 50), 2, (200, 200, 200))\n",
+    "        \n",
+    "        \n",
+    "        if fps.fps() < 1 and not is_stream:\n",
+    "            processing_speed = int(5 / fps.fps())\n",
+    "        \n",
+    "        cv2.imshow('Display', frame)\n",
+    "        \n",
+    "        if is_stream:\n",
+    "            key = cv2.waitKey(1)\n",
+    "        else:\n",
+    "            key = cv2.waitKey(int(video_fps))\n",
+    "            \n",
+    "        if key == ord('q'):\n",
+    "            \n",
+    "            break\n",
+    "            \n",
+    "            \n",
+    "    if is_stream:\n",
+    "        stream.stop()\n",
+    "    else:\n",
+    "        video.release()\n",
+    "    \n",
+    "    cv2.destroyWindow('Display')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "multi_person_tracking(path = 'demo_videos/ipcam1.mp4', is_stream = False)"
+   ]
   },
   {
    "cell_type": "code",
